@@ -7,7 +7,6 @@ public:
   CGUIWindowVideoGenre(void);
   virtual ~CGUIWindowVideoGenre(void);
   virtual bool OnMessage(CGUIMessage& message);
-  virtual void OnAction(const CAction &action);
 
 protected:
   virtual void SaveViewMode();
